[gd_scene load_steps=4 format=3 uid="uid://bh6nqn5m04pj4"]

[ext_resource type="Script" path="res://src/survivor_core/enemies/wizard_enemy.gd" id="1_xyb1c"]
[ext_resource type="Texture2D" uid="uid://b53j5obp86i6w" path="res://src/survivor_core/enemies/wizard_enemy.png" id="2_vh5kt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_86gx1"]
radius = 12.0

[node name="WizardEnemy" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_xyb1c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vh5kt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_86gx1")

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("health_bar")]
script = ExtResource("2_vh5kt")
max_health = 15.0
health_bar = NodePath("../HealthBar")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -20.0
value = 100.0
show_percentage = false

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("3_vh5kt")
max_speed = 60

[node name="HitFlashComponent" type="Node2D" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_vh5kt")
sprite = NodePath("../Sprite2D")

[node name="DeathComponent" type="Node" parent="." node_paths=PackedStringArray("health_component", "sprite")]
script = ExtResource("5_vh5kt")
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]